--- a/app/src/main/res/layout/fragment_chatroom.xml
+++ b/app/src/main/res/layout/fragment_chatroom.xml
@@ -137,6 +137,7 @@
                 android:id="@+id/rvMessages"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 tools:listitem="@layout/message_layout" />
         </FrameLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
