--- a/app/src/main/res/layout/fragment_create_new_broadcast_group.xml
+++ b/app/src/main/res/layout/fragment_create_new_broadcast_group.xml
@@ -54,6 +54,17 @@
                     android:textColor="@color/appColor"
                     android:textColorHint="@color/appColor" />
             </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_selected_user_friend_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:layout_marginBottom="12dp"
+                android:scrollbars="horizontal"
+                android:layout_marginTop="8dp"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                tools:listitem="@layout/selected_user_item" />
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
